Duplicate validation Done

--- a/DhaliProcurement/Views/Projects/Create.cshtml
+++ b/DhaliProcurement/Views/Projects/Create.cshtml
@@ -594,7 +594,7 @@
 
 
             if ($('.Resource-list tr').length < 2) {
-                alert('Please Add Site to this Project');
+                alert('Please add site to this Project');
                 isValid = false;
             }
 
