vendor payment project wise

--- a/DhaliProcurement/Views/Shared/_Layout.cshtml
+++ b/DhaliProcurement/Views/Shared/_Layout.cshtml
@@ -225,6 +225,7 @@
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "MaterialsEntry" ? "active" : "")"><a href="@Url.Action("MaterialsEntry", "Report")">Materials Entry</a></li>
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "VendorPayment" ? "active" : "")"><a href="@Url.Action("VendorPayment", "Report")">Vendor Payment</a></li>
                                         <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "VendorPaymentItemWise" ? "active" : "")"><a href="@Url.Action("VendorPaymentItemWise", "Report")">Vendor Payment Item-Wise Report</a></li>
+                                        <li class="@(ViewContext.RouteData.Values["Controller"].ToString() == "Report" && ViewContext.RouteData.Values["Action"].ToString() == "VendorPaymentProject" ? "active" : "")"><a href="@Url.Action("VendorPaymentProject", "Report")">Vendor Payment Project Wise</a></li>
 
                                          
                                       </ul>
