--- a/DhaliProcurement/Views/Projects/Edit.cshtml
+++ b/DhaliProcurement/Views/Projects/Edit.cshtml
@@ -300,7 +300,7 @@
                         <div class="modal-footer">
                             <div class="col-md-offset-2 col-md-10">
                                 <button type="submit" class="btn btn-primary" id="ModalDetailSave">Save</button>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="ModalClose">Close</button>
                             </div>
                         </div>
                     </div>
@@ -465,20 +465,32 @@
         var SiteEngineerName = $('#ModalSiteEngineer option:selected').text();
         
 
-        if (SiteName.trim().length > 256) {
-            $('#ModalSiteName_Error').text("Site Name can not be greater than 256 characters!").show();
+        if(SiteName==""){
+            $('#ModalSiteName_Error').text("Site required").show();
             isValidSite = false;
         }
-        else {
-            $('#ModalSiteName_Error').hide();
+        else{
+            if (SiteName.trim().length > 256) {
+                $('#ModalSiteName_Error').text("Site Name can not be greater than 256 characters!").show();
+                isValidSite = false;
+            }
+            else {
+                $('#ModalSiteName_Error').hide();
+            }
         }
 
-        if (Location.trim().length > 256) {
-            $('#ModalLocation_Error').text("Location can not be greater than 256 characters!").show();
+        if(Location.trim()==""){
+            $('#ModalLocation_Error').text("Location required").show();
             isValidSite = false;
         }
-        else {
-            $('#ModalLocation_Error').hide();
+        else{
+            if (Location.trim().length > 256) {
+                $('#ModalLocation_Error').text("Location can not be greater than 256 characters!").show();
+                isValidSite = false;
+            }
+            else {
+                $('#ModalLocation_Error').hide();
+            }
         }
 
         if (SiteEngineerName.trim() == '' || SiteEngineerName.trim() == "--Select--") {
@@ -518,6 +530,13 @@
 
             $('#detailForm').modal('hide');
         }
+    });
+
+
+    $('#ModalClose').click(function () {
+        $('#ModalSiteName_Error').hide();
+        $('#ModalLocation_Error').hide();
+        $('#ModalSiteEngineer_Error').hide();
     });
 
 
@@ -637,7 +656,6 @@
 
     function RemoveTask(e)
     {
-        debugger;
 
         var currRowIndex = 0;
 
